Release/3.5.7.1/README.md
# How to make it run?

(Works only with the Steam Version on Windows)

You have two options:

1) **Run with _.exe files** (easy):

   - Go to [Github Releases](https://github.com/Devil4ngle/Idle_Slayer_Script/releases)
   - Download `Idle Runner_x64.exe` or `Idle Runner_x32.exe` depending on your [System](https://support.microsoft.com/en-us/windows/32-bit-and-64-bit-windows-frequently-asked-questions-c6ca9541-8dce-4d48-0415-94a3faa2e13d).
   - Run `Idle Runner_x64.exe` / `Idle Runner_x32.exe`
   
   ![image](https://github.com/Devil4ngle/Idle_Slayer_Script/assets/101042789/a6224058-0f4b-435e-bca0-45730f9b3dd4)



2) **Run with source code** (harder):

    If you do not trust the exe files or your antivirus won't let you run it then you can do the following:
   
    - Download the [Source Code](https://github.com/Devil4ngle/Idle_Slayer_Script/releases) and ***unzip*** it.
    
    - Download and install [AutoIt Full Installation AND AutoIt Script Editor](https://www.autoitscript.com/site/autoit/downloads/). ( You need to install both )
   
   ![image](https://github.com/Devil4ngle/Idle_Slayer_Script/assets/101042789/df50f05b-530e-4777-bfd3-5012adf77baf)

    - Right-click the file `Idle Runner.au3` and click `Compile with Options`

    ![image](https://github.com/Devil4ngle/Idle_Slayer_Script/assets/101042789/5dc44eb5-aa9a-435f-82fb-710526cc4795)
   
    - In the menu click `Compile Script`.
      
   It will generate exe files which should run without issue.

# Settings

- ### Mandatory Settings:

    - Resolution of the game needs to be ***1280x720*** and Windowed and display resolution to 100%.
      
    - The game must be in ***English***.
 
    - Game needs to be in ***focus***, if not it will only jump.
 
    - Disable custom cursor.

    - Set keybinds: jump to up arrow, boost to right arrow.

      
- ### Optional Settings:

    - ***Bonus stage 2/3*** will only be completed check Skip Bonus Stage otherwise.

    - Ascension Upgrade ***Protect***  is needed to complete Bonus Stage 2/3.

    - Do NOT buy the ***Vertical Magnet***.

    - Disable ***dialogue for Portal*** in setting.

    - Enable ***rounded bulk*** in setting.

    - Enable ***hide locked quest rewards*** in setting.

    - Ascension Upgrade ***Leadership Master*** is needed for claiming minions otherwise it will not claim them.
  
    - Use Anna Default-Skin for Ascending Heights

    ### For Bossfights only:

   -  Use Anna Default-Skin.

   - Use Bat Long bow or a Multishot Bow.

   - It only works after you beat him in the story mode
  
# Join the Idle Slayer Scripting Discord Community!

For additional assistance or to connect with a community, join the [Idle Slayer Scripting Discord Server](https://discord.gg/aEaBr77UDn)

# What can it do?

Everything the game offers with Human Performance if not better. Here is a showcase.
[![Watch the video](https://img.youtube.com/vi/uDY0wCMQZX8/hqdefault.jpg)](https://www.youtube.com/watch?v=uDY0wCMQZX8)

[![Watch the video](https://img.youtube.com/vi/8fPHeHPHHlo/hqdefault.jpg)](https://www.youtube.com/watch?v=8fPHeHPHHlo)

[![Watch the video](https://img.youtube.com/vi/ummuxK_9-ck/hqdefault.jpg)](https://www.youtube.com/watch?v=ummuxK_9-ck)
---

Buy Me a [Coffee](https://www.buymeacoffee.com/devil4ngle) :coffee: 
